--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Echo LINE Bot",
   "main": "index.js",
   "scripts": {
-    "start": "npm index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yuma140902",
