--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "yuma140902",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^7.3.0",
     "express": "^4.17.1"
   }
 }
