--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "kuromoji": "^0.1.2"
   }
 }
