--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
     "express": "^4.17.1",
-    "kuromoji": "^0.1.2"
+    "kuromoji": "^0.1.2",
+    "pg": "^8.7.1"
   }
 }
