--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "line-echo",
   "version": "1.0.0",
   "description": "Echo LINE Bot",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yuma140902",
