--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@line/bot-sdk": "^7.3.0",
     "express": "^4.17.1",
     "kuromoji": "^0.1.2",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "typescript": "^4.4.3"
   }
 }
