--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "line-echo",
   "version": "1.0.0",
   "description": "Echo LINE Bot",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "node .",
+    "build": "npx tsc",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yuma140902",
@@ -15,5 +17,10 @@
     "kuromoji": "^0.1.2",
     "pg": "^8.7.1",
     "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/kuromoji": "^0.1.1",
+    "@types/pg": "^8.6.1"
   }
 }
